tests/fixtures/invalid/int_notin_float.py
# Cannot use 'not in' with Int and Float
x: bool = 1 not in 1.0
